--- a/aws-volume-provisioner/Cargo.toml
+++ b/aws-volume-provisioner/Cargo.toml
@@ -1,18 +1,19 @@
 [package]
-name = "aws-volume-mounter"
+name = "aws-volume-provisioner"
 version = "0.0.1"
 edition = "2021"
 rust-version = "1.62"
 readme = "README.md"
 
 [[bin]]
-name = "aws-volume-mounter"
+name = "aws-volume-provisioner"
 path = "src/main.rs"
 
 [dependencies]
 aws-manager = "0.0.6" # https://crates.io/crates/aws-manager/versions
 aws-sdk-ec2 = "0.15.0"
 clap = { version = "3.2.8", features = ["cargo", "derive"] }
+random-manager = "0.0.1"
 command-manager = "0.0.1"
 env_logger = "0.9.0"
 log = "0.4.17"
