--- a/aws-volume-provisioner/Cargo.toml
+++ b/aws-volume-provisioner/Cargo.toml
@@ -13,8 +13,10 @@ path = "src/main.rs"
 aws-manager = "0.0.6" # https://crates.io/crates/aws-manager/versions
 aws-sdk-ec2 = "0.15.0"
 clap = { version = "3.2.8", features = ["cargo", "derive"] }
-random-manager = "0.0.1"
 command-manager = "0.0.1"
 env_logger = "0.9.0"
 log = "0.4.17"
+path-clean = { version = "0.1.0", optional = false }
+random-manager = "0.0.1"
 tokio = { version = "1.19.2", features = ["full"] }
+walkdir = { version = "2.3.2", optional = false }
