--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -148,7 +148,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --release --bin aws-volume-mounter --bin aws-volume-provisioner --target ${{ matrix.job.target }}
+          args: --release --bin aws-volume-provisioner --target ${{ matrix.job.target }}
 
       - name: Compress binaries
         id: release_artifacts
@@ -159,12 +159,6 @@ jobs:
         run: |
           if [ "$PLATFORM_NAME" == "linux" ]; then
 
-            ./target/${TARGET}/release/aws-volume-mounter --help
-            cp ./target/${TARGET}/release/aws-volume-mounter aws-volume-mounter.${TARGET}
-            echo "::set-output name=file_name_aws_volume_mounter::aws-volume-mounter.${TARGET}"
-            tar -czvf aws-volume-mounter_${TARGET}.tar.gz -C ./target/${TARGET}/release aws-volume-mounter
-            echo "::set-output name=file_name_aws_volume_mounter_tar_gz::aws-volume-mounter_${TARGET}.tar.gz"
-
             ./target/${TARGET}/release/aws-volume-provisioner --help
             cp ./target/${TARGET}/release/aws-volume-provisioner aws-volume-provisioner.${TARGET}
             echo "::set-output name=file_name_aws_volume_provisioner::aws-volume-provisioner.${TARGET}"
@@ -172,11 +166,6 @@ jobs:
             echo "::set-output name=file_name_aws_volume_provisioner_tar_gz::aws-volume-provisioner_${TARGET}.tar.gz"
 
           elif [ "$PLATFORM_NAME" == "darwin" ]; then
-
-            cp ./target/${TARGET}/release/aws-volume-mounter aws-volume-mounter.${TARGET}
-            echo "::set-output name=file_name_aws_volume_mounter::aws-volume-mounter.${TARGET}"
-            gtar -czvf aws-volume-mounter_${TARGET}.tar.gz -C ./target/${TARGET}/release aws-volume-mounter
-            echo "::set-output name=file_name_aws_volume_mounter_tar_gz::aws-volume-mounter_${TARGET}.tar.gz"
 
             cp ./target/${TARGET}/release/aws-volume-provisioner aws-volume-provisioner.${TARGET}
             echo "::set-output name=file_name_aws_volume_provisioner::aws-volume-provisioner.${TARGET}"
@@ -201,8 +190,6 @@ jobs:
           prerelease: true
           body: Latest builds from the last commit.
           files: |
-            ${{ steps.release_artifacts.outputs.file_name_aws_volume_mounter }}
-            ${{ steps.release_artifacts.outputs.file_name_aws_volume_mounter_tar_gz }}
             ${{ steps.release_artifacts.outputs.file_name_aws_volume_provisioner }}
             ${{ steps.release_artifacts.outputs.file_name_aws_volume_provisioner_tar_gz }}
 
@@ -219,7 +206,5 @@ jobs:
           prerelease: true
           body: Release builds for ${{ github.ref_name }}.
           files: |
-            ${{ steps.release_artifacts.outputs.file_name_aws_volume_mounter }}
-            ${{ steps.release_artifacts.outputs.file_name_aws_volume_mounter_tar_gz }}
             ${{ steps.release_artifacts.outputs.file_name_aws_volume_provisioner }}
             ${{ steps.release_artifacts.outputs.file_name_aws_volume_provisioner_tar_gz }}
