--- a/aws-volume-provisioner/Cargo.toml
+++ b/aws-volume-provisioner/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aws-volume-provisioner"
-version = "0.0.11"
+version = "0.0.12"
 edition = "2021"
 rust-version = "1.63"
 readme = "README.md"
@@ -13,6 +13,7 @@ path = "src/main.rs"
 [dependencies]
 aws-manager = "0.0.17" # https://crates.io/crates/aws-manager/versions
 aws-sdk-ec2 = "0.18.0"
+chrono = "0.4.22"
 clap = { version = "3.2.20", features = ["cargo", "derive"] }
 command-manager = "0.0.1"
 env_logger = "0.9.0"
