--- a/aws-volume-provisioner/Cargo.toml
+++ b/aws-volume-provisioner/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "aws-volume-provisioner"
-version = "0.0.16"
+version = "0.0.17"
 edition = "2021"
 rust-version = "1.64"
+description = "AWS volume provisioner"
+repository = "https://github.com/gyuho/volume-manager"
 readme = "README.md"
 license = "Apache-2.0"
 
@@ -14,7 +16,7 @@ path = "src/main.rs"
 aws-manager = "0.19.0" # https://crates.io/crates/aws-manager/versions
 aws-sdk-ec2 = "0.19.0"
 chrono = "0.4.22"
-clap = { version = "4.0.2", features = ["cargo", "derive"] }
+clap = { version = "4.0.4", features = ["cargo", "derive"] }
 command-manager = "0.0.1"
 env_logger = "0.9.1"
 log = "0.4.17"
