--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -19,6 +19,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
@@ -26,11 +27,14 @@ jobs:
           profile: minimal
           components: rustfmt, clippy
           override: true
+
       - name: Check Rust version
         run: rustc --version
+
       - uses: Swatinem/rust-cache@v1
         with:
           cache-on-failure: true
+
       - name: Run static analysis tests
         shell: bash
         run: scripts/tests.lint.sh
@@ -41,6 +45,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
@@ -48,11 +53,14 @@ jobs:
           profile: minimal
           components: rustfmt, clippy
           override: true
+
       - name: Check Rust version
         run: rustc --version
+
       - uses: Swatinem/rust-cache@v1
         with:
           cache-on-failure: true
+
       - name: Check unused Cargo dependencies
         shell: bash
         run: scripts/tests.unused.sh
@@ -63,17 +71,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           profile: minimal
           override: true
+
       - name: Check Rust version
         run: rustc --version
+
       - uses: Swatinem/rust-cache@v1
         with:
           cache-on-failure: true
+
       - name: Run unit tests
         run: scripts/tests.unit.sh
 
@@ -114,6 +126,7 @@ jobs:
           toolchain: stable
           target: ${{ matrix.job.target }}
           override: true
+
       - name: Check Rust version
         run: rustc --version
 
@@ -161,16 +174,16 @@ jobs:
 
             ./target/${TARGET}/release/aws-volume-provisioner --help
             cp ./target/${TARGET}/release/aws-volume-provisioner aws-volume-provisioner.${TARGET}
-            echo "::set-output name=file_name_aws_volume_provisioner::aws-volume-provisioner.${TARGET}"
+            echo "file_name_aws_volume_provisioner=aws-volume-provisioner.${TARGET}" >> $GITHUB_OUTPUT
             tar -czvf aws-volume-provisioner_${TARGET}.tar.gz -C ./target/${TARGET}/release aws-volume-provisioner
-            echo "::set-output name=file_name_aws_volume_provisioner_tar_gz::aws-volume-provisioner_${TARGET}.tar.gz"
+            echo "file_name_aws_volume_provisioner_tar_gz=aws-volume-provisioner_${TARGET}.tar.gz" >> $GITHUB_OUTPUT
 
           elif [ "$PLATFORM_NAME" == "darwin" ]; then
 
             cp ./target/${TARGET}/release/aws-volume-provisioner aws-volume-provisioner.${TARGET}
-            echo "::set-output name=file_name_aws_volume_provisioner::aws-volume-provisioner.${TARGET}"
+            echo "file_name_aws_volume_provisioner=aws-volume-provisioner.${TARGET}" >> $GITHUB_OUTPUT
             gtar -czvf aws-volume-provisioner_${TARGET}.tar.gz -C ./target/${TARGET}/release aws-volume-provisioner
-            echo "::set-output name=file_name_aws_volume_provisioner_tar_gz::aws-volume-provisioner_${TARGET}.tar.gz"
+            echo "file_name_aws_volume_provisioner_tar_gz=aws-volume-provisioner_${TARGET}.tar.gz" >> $GITHUB_OUTPUT
 
           else
 
