--- a/aws-volume-provisioner/Cargo.toml
+++ b/aws-volume-provisioner/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aws-volume-provisioner"
-version = "0.0.23"
+version = "0.0.24" # https://github.com/gyuho/volume-manager/releases
 edition = "2021"
 rust-version = "1.65"
 description = "AWS volume provisioner"
@@ -13,10 +13,10 @@ name = "aws-volume-provisioner"
 path = "src/main.rs"
 
 [dependencies]
-aws-manager = "0.21.6" # https://crates.io/crates/aws-manager/versions
+aws-manager = "0.21.7" # https://crates.io/crates/aws-manager/versions
 aws-sdk-ec2 = "0.21.0"
 chrono = "0.4.23"
-clap = { version = "4.0.26", features = ["cargo", "derive"] }
+clap = { version = "4.0.28", features = ["cargo", "derive"] }
 command-manager = "0.0.1"
 env_logger = "0.10.0"
 log = "0.4.17"
