--- a/aws-volume-provisioner/Cargo.toml
+++ b/aws-volume-provisioner/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aws-volume-provisioner"
-version = "0.0.38" # https://github.com/gyuho/volume-manager/releases
+version = "0.0.39" # https://github.com/gyuho/volume-manager/releases
 edition = "2021"
 rust-version = "1.66"
 description = "AWS volume provisioner"
@@ -13,14 +13,14 @@ name = "aws-volume-provisioner"
 path = "src/main.rs"
 
 [dependencies]
-aws-manager = {version = "0.22.17", features = ["ec2"] } # https://crates.io/crates/aws-manager
+aws-manager = { version = "0.22.18", features = ["ec2"] } # https://crates.io/crates/aws-manager
 aws-sdk-ec2 = "0.22.0"
 chrono = "0.4.23"
 clap = { version = "4.0.32", features = ["cargo", "derive"] }
 command-manager = "0.0.1"
 env_logger = "0.10.0"
 log = "0.4.17"
-path-clean = { version = "0.1.0", optional = false }
+path-clean = "0.1.0"
 random-manager = "0.0.2"
 tokio = { version = "1.23.0", features = ["full"] }
-walkdir = { version = "2.3.2", optional = false }
+walkdir = "2.3.2"
