--- a/aws-volume-provisioner-installer/Cargo.toml
+++ b/aws-volume-provisioner-installer/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aws-volume-provisioner-installer"
-version = "0.0.0" # https://crates.io/crates/aws-volume-provisioner-installer
+version = "0.0.46" # https://github.com/ava-labs/volume-manager/releases
 edition = "2021"
 rust-version = "1.66"
 publish = true
@@ -10,7 +10,7 @@ readme = "README.md"
 license = "Apache-2.0"
 
 [dependencies]
-aws-manager = { version = "0.23.2", features = ["s3"] } # https://github.com/gyuho/aws-manager/tags
+aws-manager = { version = "0.23.2", features = ["s3"] } # https://crates.io/crates/aws-manager
 compress-manager = "0.0.4"
 http-manager = "0.0.8"
 log = "0.4.17"
