--- a/aws-volume-provisioner-installer/Cargo.toml
+++ b/aws-volume-provisioner-installer/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aws-volume-provisioner-installer"
-version = "0.0.85" # https://github.com/ava-labs/volume-manager/releases
+version = "0.0.86" # https://github.com/ava-labs/volume-manager/releases
 edition = "2021"
 rust-version = "1.68"
 publish = true
@@ -16,7 +16,7 @@ random-manager = "0.0.5"
 reqwest = "0.11.16"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96" # https://github.com/serde-rs/json
-tokio = "1.27.0" # https://github.com/tokio-rs/tokio/releases
+tokio = { version = "1.27.0", features = ["full"] } # https://github.com/tokio-rs/tokio/releases
 
 [dev-dependencies]
 env_logger = "0.10.0"
